--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@mui/icons-material": "^5.14.14",
     "@mui/material": "^5.14.14",
     "@nextui-org/react": "^2.1.13",
+    "axios": "^1.6.2",
     "framer-motion": "^10.16.4",
     "next": "13.5.5",
     "react": "^18",
